@@ -1,3 +1,7 @@
+14 April 2011: Wouter
+	- remove chnum. Added numlist sorted by domain.number.
+	  domains that are not used are removed.
+
 13 April 2011: Wouter
 	- Fix is_existing flag for ENT when domain that has a shared ENT
 	  is deleted by IXFR.
